--- a/src/app/discord-field/discord-field.component.html
+++ b/src/app/discord-field/discord-field.component.html
@@ -1,11 +1,13 @@
 <div class="discord">
-    <div class="avatar-container">
-        <img [src]="getAvatarUrl()" class="avatar-img">
-    </div>
-    <div class="name-container" [ngClass]="{'logged-out': !isLoggedIn()}">
-        <span class="profile-name">{{ getUserName() }}</span>
+  <div class="avatar-container">
+    <img [src]="getAvatarUrl()" class="avatar-img">
+  </div>
+  <div class="name-container" [ngClass]="{'logged-out': !isLoggedIn()}">
+    <span class="profile-name">{{ getUserName() }}</span>
 
-    <button *ngIf="isLoggedIn()" mat-button (click)="logOut()" class="logout-button">
+    @if (isLoggedIn()) {
+      <button mat-button (click)="logOut()" class="logout-button">
         <mat-icon>close</mat-icon>
-    </button>
-</div>
+      </button>
+    }
+  </div>
