--- a/src/app/save-view/save-view.component.html
+++ b/src/app/save-view/save-view.component.html
@@ -1,59 +1,81 @@
 <div class="content">
-    <span *ngIf="activeSave != null">
-        <div>
-            <span><strong>Save-Date:</strong></span>
-            <span>{{ activeSave.getRealDate().toLocaleDateString() }}</span>
-            <span><strong>Ingame-Date:</strong></span>
-            <span>{{ activeSave.getIngameDate().toLocaleDateString() }}</span>
-        </div>
+  @if (activeSave != null) {
+    <span>
+      <div>
+        <span><strong>Save-Date:</strong></span>
+        <span>{{ activeSave.getRealDate().toLocaleDateString() }}</span>
+        <span><strong>Ingame-Date:</strong></span>
+        <span>{{ activeSave.getIngameDate().toLocaleDateString() }}</span>
+      </div>
     </span>
+  }
 </div>
-<mat-tab-group *ngIf="activeSave != null" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChange($event)"
+@if (activeSave != null) {
+  <mat-tab-group [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChange($event)"
     style="width: 100%;">
     <mat-tab label="Countries">
-        <app-table *ngIf="selectedTabIndex === 0" [rowElements]="getCountries()"
-            [columns]="columnProvider.getCountryColumnList()"></app-table>
+      @if (selectedTabIndex === 0) {
+        <app-table [rowElements]="getCountries()"
+        [columns]="columnProvider.getCountryColumnList()"></app-table>
+      }
     </mat-tab>
     <mat-tab label="Country Budgets">
-        <app-table *ngIf="selectedTabIndex === 1" [rowElements]="getCountries()"
-            [columns]="columnProvider.getCountryFinancialColumnList()"></app-table>
+      @if (selectedTabIndex === 1) {
+        <app-table [rowElements]="getCountries()"
+        [columns]="columnProvider.getCountryFinancialColumnList()"></app-table>
+      }
     </mat-tab>
     <mat-tab label="Blocs">
-        <app-table *ngIf="selectedTabIndex === 2" [rowElements]="activeSave.getPowerBlocs()"
-            [columns]="columnProvider.getPowerBlocColumnList()"></app-table>
+      @if (selectedTabIndex === 2) {
+        <app-table [rowElements]="activeSave.getPowerBlocs()"
+        [columns]="columnProvider.getPowerBlocColumnList()"></app-table>
+      }
     </mat-tab>
     <mat-tab label="Building Financials">
-        <app-table *ngIf="selectedTabIndex === 3" [rowElements]="getCountries()"
-            [columns]="columnProvider.getBuildingFinancialColumnList()"></app-table>
+      @if (selectedTabIndex === 3) {
+        <app-table [rowElements]="getCountries()"
+        [columns]="columnProvider.getBuildingFinancialColumnList()"></app-table>
+      }
     </mat-tab>
     <mat-tab label="Buildings">
-        <app-table *ngIf="selectedTabIndex === 4" [rowElements]="getCountries()"
-            [columns]="columnProvider.getBuildingTableColumnList()"></app-table>
+      @if (selectedTabIndex === 4) {
+        <app-table [rowElements]="getCountries()"
+        [columns]="columnProvider.getBuildingTableColumnList()"></app-table>
+      }
     </mat-tab>
     <mat-tab label="Links">
-        <app-table *ngIf="selectedTabIndex === 5" [rowElements]="getCountries()"
-            [columns]="columnProvider.getEcoConnectionsColumnList()"></app-table>
+      @if (selectedTabIndex === 5) {
+        <app-table [rowElements]="getCountries()"
+        [columns]="columnProvider.getEcoConnectionsColumnList()"></app-table>
+      }
     </mat-tab>
     <mat-tab label="Goods">
-        <div class="table-controls" *ngIf="selectedTabIndex === 6">
-            <label class="radio-group-label">Goods View Mode</label>
-            <mat-radio-group [(ngModel)]="goodsViewMode" (ngModelChange)="onGoodsViewModeChange($event)"
-                aria-label="Goods view mode" style="margin-bottom: 8px;">
-                <mat-radio-button value="input" style="margin-right: 16px;">Input</mat-radio-button>
-                <mat-radio-button value="balance" style="margin-right: 16px;">Balance</mat-radio-button>
-                <mat-radio-button value="output" style="margin-right: 16px;">Output</mat-radio-button>
-            </mat-radio-group>
-            <label class="radio-group-label">Category</label>
-            <mat-radio-group [ngModel]="selectedGoodsCategory" (ngModelChange)="onGoodsCategoryChange($event)">
-                <mat-radio-button *ngFor="let category of availableGoodsCategories" [value]="category"
-                    style="margin-right: 16px;">
-                    {{ category.name }}
-                </mat-radio-button>
-            </mat-radio-group>
+      @if (selectedTabIndex === 6) {
+        <div class="table-controls">
+          <label class="radio-group-label">Goods View Mode</label>
+          <mat-radio-group [(ngModel)]="goodsViewMode" (ngModelChange)="onGoodsViewModeChange($event)"
+            aria-label="Goods view mode" style="margin-bottom: 8px;">
+            <mat-radio-button value="input" style="margin-right: 16px;">Input</mat-radio-button>
+            <mat-radio-button value="balance" style="margin-right: 16px;">Balance</mat-radio-button>
+            <mat-radio-button value="output" style="margin-right: 16px;">Output</mat-radio-button>
+          </mat-radio-group>
+          <label class="radio-group-label">Category</label>
+          <mat-radio-group [ngModel]="selectedGoodsCategory" (ngModelChange)="onGoodsCategoryChange($event)">
+            @for (category of availableGoodsCategories; track category) {
+              <mat-radio-button [value]="category"
+                style="margin-right: 16px;">
+                {{ category.name }}
+              </mat-radio-button>
+            }
+          </mat-radio-group>
         </div>
-        <!-- <app-table *ngIf="selectedTabIndex === 6" [rowElements]="getCountries()" [columns]="goodColumns"></app-table> -->
+      }
+      <!-- <app-table *ngIf="selectedTabIndex === 6" [rowElements]="getCountries()" [columns]="goodColumns"></app-table> -->
     </mat-tab>
     <mat-tab label="Plot">
-        <app-plot-view *ngIf="selectedTabIndex === 7"></app-plot-view>
+      @if (selectedTabIndex === 7) {
+        <app-plot-view></app-plot-view>
+      }
     </mat-tab>
-</mat-tab-group>
+  </mat-tab-group>
+}
