wrapped routes into paradoxComponent

--- a/src/app/paradox/paradox.component.html
+++ b/src/app/paradox/paradox.component.html
@@ -36,12 +36,20 @@
         </button>
       </div>
     </div>
+    <div class="sidenav-content">
+        <button mat-raised-button (click)="navigate('save')" [disabled]="isActiveRoute('save')">Save</button>
+        <button mat-raised-button (click)="navigate('map')" [disabled]="isActiveRoute('map')">Map</button>
+        <button mat-raised-button (click)="navigate('lab')" [disabled]="isActiveRoute('lab')">Lab</button>
+        <button mat-raised-button (click)="navigate('mc')" [disabled]="isActiveRoute('mc')">Mega Campaign</button>
+        <button mat-raised-button (click)="navigate('mc/admin')" [disabled]="isActiveRoute('mc/admin')">MC Admin</button>
+    </div>
+    
     @for (action of sideNavContentProvider.getActions(); track action.label) {
       <button mat-button (click)="action.action()">{{ action.label }}</button>
       <mat-divider></mat-divider>
     }
   </mat-drawer>
 
-  <app-save-view-splash></app-save-view-splash>
+  <router-outlet></router-outlet>
 
 </mat-drawer-container>
