--- a/src/app/mc/mega-campaign/mega-campaign.component.scss
+++ b/src/app/mc/mega-campaign/mega-campaign.component.scss
@@ -15,14 +15,17 @@
 
     @include mat.button-overrides((
         protected-container-color: var(--mat-sys-primary),
-        protected-label-text-color: var(--background-color),
+        protected-label-text-color: var(--mat-sys-primary-container),
         protected-container-height: 2em,
         protected-horizontal-padding: 24px,
         protected-label-text-size: 1.2em,
-        protected-label-text-weight: bold,
-        protected-state-layer-color: var(--background-color),
-        protected-hover-container-elevation-shadow: 0 4px 8px rgba(0, 0, 0, 0.3),
-        protected-pressed-container-elevation-shadow: 0 2px 4px rgba(0, 0, 0, 0.2),
+        protected-state-layer-color: var(--mat-sys-primary-container),
+        protected-hover-state-layer-opacity: 0.12,
+        protected-focus-state-layer-opacity: 0.16,
+        protected-pressed-state-layer-opacity: 0.24,
+        protected-ripple-color: var(--mat-sys-primary-container),
+        protected-hover-container-elevation-shadow: 0 6px 12px rgba(0, 0, 0, 0.4),
+        protected-pressed-container-elevation-shadow: 0 1px 3px rgba(0, 0, 0, 0.25),
     ));
 }
 
