--- a/src/app/paradox/paradox.component.scss
+++ b/src/app/paradox/paradox.component.scss
@@ -75,6 +75,15 @@ span {
     border-top: 1px solid var(--faded-border-color);
 }
 
+.sidenav-content {
+    padding-top: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 1em;
+}
+
 .menu-button {
     display: flex;
     align-items: center;
