added stocks graph

--- a/src/app/lab/lab.component.html
+++ b/src/app/lab/lab.component.html
@@ -1,1 +1,2 @@
-<app-slab-map-view #viewer [save]="save"></app-slab-map-view>
+<!--<app-slab-map-view #viewer [save]="save"></app-slab-map-view>-->
+<app-lineviewer></app-lineviewer>
