--- a/src/app/paradox/paradox.component.scss
+++ b/src/app/paradox/paradox.component.scss
@@ -58,7 +58,8 @@ span {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200" preserveAspectRatio="none"><rect x="0" y="0" width="100" height="200" fill="%23009736"/><rect x="100" y="0" width="100" height="200" fill="%23FFFFFF"/><rect x="200" y="0" width="100" height="200" fill="%23000000"/><polygon points="0,0 300,0 150,100" fill="%23EE2A35"/></svg>');
+    //background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200" preserveAspectRatio="none"><rect x="0" y="0" width="100" height="200" fill="%23009736"/><rect x="100" y="0" width="100" height="200" fill="%23FFFFFF"/><rect x="200" y="0" width="100" height="200" fill="%23000000"/><polygon points="0,0 300,0 150,100" fill="%23EE2A35"/></svg>');
+    background-color: var(--void-color);
     background-size: cover;
     filter: brightness(0.3);
     pointer-events: none;
