you gotta have testing in place

--- a/src/app/paradox/paradox.component.html
+++ b/src/app/paradox/paradox.component.html
@@ -49,9 +49,23 @@
                     <mat-icon class="nav-icon">admin_panel_settings</mat-icon>
                     <span class="nav-label">Mega-Campaign Admin</span>
                 </button>
+                <button mat-button class="nav-button" (click)="navigate('stonks')"
+                    [disabled]="isActiveRoute('stonks')">
+                    <mat-icon class="nav-icon">insights</mat-icon>
+                    <span class="nav-label">Stonks</span>
+                </button>
+                <button mat-button class="nav-button" (click)="navigate('mc/modder')"
+                    [disabled]="isActiveRoute('mc/modder')">
+                    <mat-icon class="nav-icon">build_circle</mat-icon>
+                    <span class="nav-label">Mega Modder</span>
+                </button>
                 <button mat-button class="nav-button" (click)="navigate('map')" [disabled]="isActiveRoute('map')">
                     <mat-icon class="nav-icon">map</mat-icon>
                     <span class="nav-label">Map</span>
+                </button>
+                <button mat-button class="nav-button" (click)="navigate('jomini')" [disabled]="isActiveRoute('jomini')">
+                    <mat-icon class="nav-icon">data_object</mat-icon>
+                    <span class="nav-label">Parser Kiosk</span>
                 </button>
             </div>
         </div>
