--- a/src/app/mc/mega-campaign/mega-campaign.component.html
+++ b/src/app/mc/mega-campaign/mega-campaign.component.html
@@ -52,7 +52,7 @@
                     <div class="plot-container">
                         <div class="header-container">
                             <h1>
-                                <button mat-raised-button 
+                                <button mat-button 
                                         class="back-button"
                                         (click)="goBackToPlayerList()"
                                         matTooltip="Go back"
