--- a/src/app/modding/mega-modder/mega-modder.component.scss
+++ b/src/app/modding/mega-modder/mega-modder.component.scss
@@ -18,15 +18,42 @@
     border-radius: 1em;
     background-color: var(--background-color);
     padding-bottom: 1em;
+    min-height: 0;
 
-    ::ng-deep mat-tab-group {
-        flex: 1;
+    ::ng-deep mat-tab-group,
+    ::ng-deep .mat-mdc-tab-body-wrapper,
+    ::ng-deep .mat-mdc-tab-body,
+    ::ng-deep .mat-mdc-tab-body-content {
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+        min-height: 0;
         width: 100%;
     }
 }
 
 .tab-content {
-    padding: 20px;
+    padding: 1rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+    overflow: hidden;
+}
+
+.table-wrapper {
+    flex: 1;
+    min-height: 0;
+    overflow: auto;
+}
+
+table {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    overflow: auto;
+    box-sizing: border-box;
 }
 
 .controls-container {
