--- a/src/app/plot-view/plot-view.component.html
+++ b/src/app/plot-view/plot-view.component.html
@@ -1,6 +1,6 @@
 <div class="plot-wrapper">
     <h2 cdkFocusInitial> {{ title}} </h2>
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Download plot">
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Download plot" matTooltip="Download plot">
         <mat-icon>download</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
