--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@
             divider-height: 1px,
             active-indicator-height: 0.2em,
         ));
+    @include mat.form-field-overrides((outlined-label-text-color:var(--text-color),
+        ));
 }
 
 h2 {
@@ -41,6 +43,7 @@ body {
     --box-shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     --box-shadow-extra-large: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
+
 /*
 .tooltip {
     background: var(--lighter-background-color) !important;
