--- a/src/app/paradox/paradox.component.html
+++ b/src/app/paradox/paradox.component.html
@@ -74,9 +74,9 @@
                     <mat-icon class="nav-icon">data_object</mat-icon>
                     <span class="nav-label">Parser Kiosk</span>
                 </button>
-                <button mat-button class="nav-button" (click)="navigate('lab')" [disabled]="isActiveRoute('lab')">
-                    <mat-icon class="nav-icon">science</mat-icon>
-                    <span class="nav-label">Lab</span>
+                <button mat-button class="nav-button" (click)="navigate('db')" [disabled]="isActiveRoute('db')">
+                    <mat-icon class="nav-icon" fontSet="material-symbols-outlined">database</mat-icon>
+                    <span class="nav-label">File Administration</span>
                 </button>
             </div>
         </div>
